# rxnmapper

./: .bumpversion.cfg  .gitignore  DOCUMENTATION.md  LICENSE  MANIFEST.in  README.md  dev_requirements.txt  environment.yml  files.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi.yaml  tests.yaml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: modules.html  rxn4chemistry.html  rxnmapper.html
docs/_sources/: index.rst.txt
docs/_sources/_modules/: modules.rst.txt  rxn4chemistry.rst.txt  rxnmapper.rst.txt
docs_source/: Makefile  conf.py  index.rst
examples/: README.md  basic_example.ipynb  example_rxns.csv
rxnmapper/: __init__.py  attention.py  batched_mapper.py  core.py  smiles_utils.py  tokenization_smiles.py
rxnmapper/models/transformers/albert_heads_8_uspto_all_1310k/: config.json  vocab.txt
scripts/: run_rxnmapper_on_dataset.py
tests/: test_batched_mapper.py  test_mapper.py  test_smiles_utils.py  utils.py
