[build-system]
requires = ["setuptools >= 59.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pandas.*",
    "rdkit.*",
    "scipy.*",
    "tqdm.*"
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
