[build-system]
requires = ["setuptools >= 59.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
check_untyped_defs = true
plugins = [
    "numpy.typing.mypy_plugin",
]

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "rdkit.*",
    "scipy.*",
    "tqdm.*",
    "transformers.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
