[metadata]
name = rxnmapper
version = attr: rxnmapper.__version__
description = Reaction atom-mapping from transfomers
author = IBM RXN team
author_email = rxn4chemistry@zurich.ibm.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
url = https://github.com/rxn4chemistry/rxnmapper

[options]
packages = find:
python_requires = >= 3.6
zip_safe = False
include_package_data = True
install_requires =
    pandas>=1.0.3
    rxn-chem-utils>=1.0.3
    scipy==1.4.1
    torch==1.5.0
    transformers==4.0.0

[options.package_data]
rxnmapper =
    models/transformers/albert_heads_8_uspto_all_1310k/*

[options.extras_require]
dev =
    black>=22.1.0
    bump2version>=1.0.1
    flake8>=3.7.9
    isort>=5.10.0
    pytest>=5.4.1
    sphinx-rtd-theme==0.4.3
    sphinx==2.2.1
    twine==3.1.1

[flake8]
extend-ignore = E203, E501
