[metadata]
name = rxnmapper
version = attr: rxnmapper.__version__
description = Reaction atom-mapping from transformers
author = IBM RXN team
author_email = rxn4chemistry@zurich.ibm.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
url = https://github.com/rxn4chemistry/rxnmapper

[options]
packages = find:
python_requires = >= 3.6
zip_safe = False
include_package_data = True
install_requires =
    pandas>=1.0.3
    rxn-chem-utils>=1.0.3
    scipy>=1.4.1
    torch>=1.5.0
    transformers>=4.0.0

[options.package_data]
rxnmapper =
    models/transformers/albert_heads_8_uspto_all_1310k/*
    py.typed

[options.extras_require]
dev =
    black>=22.1.0
    bump2version>=1.0.1
    flake8>=3.7.9
    isort>=5.10.0
    mypy>=0.910
    pytest>=5.4.1
    sphinx-rtd-theme==0.4.3
    sphinx==2.2.1
    twine==3.1.1
    types-setuptools>=62.6.0
rdkit =
    # install RDKit. This is not as a setup dependency in order not to install it
    # in downstream packages and avoid potential conflicts with the conda
    # installation of RDKit
    rdkit-pypi>=2021.3.2 ; python_version<"3.7"
    rdkit>=2022.3.4 ; python_version>="3.7"

[flake8]
extend-ignore = E203, E501
